# doc-intelligence

./: .dockerignore  .env.example  .gitignore  .infisical.json  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  PROVISIONING_STATUS.md  README.md  SYSTEM-OVERVIEW.md  dev.sh  docker-compose.dev-server.yml  docker-compose.server.yml  docker-compose.yml  prod.sh  pyproject.toml  requirements-dev.txt  requirements.txt  sync-db.sh
dev/: .env.example  docker-compose.yml
dev/deno-app/: Dockerfile  deno.json  main.ts
dev/postgres/: Dockerfile
dev/postgres/init-scripts/: 01-init.sh
dev/python-app/: Dockerfile  main.py  requirements.txt
dms-automation/dms-autoprocessor/: Dockerfile  backlog.ts  cron.ts  deno.json  main.ts  reprocess-skipped.ts
dms-automation/dms-autoprocessor/lib/: ai-classifier.ts  backlog-processor.ts  duplicate-checker.ts  file-converter.ts  file-manager.ts  file-processor.ts  filename-parser.ts  folder-scanner.ts  mysql-writer.ts  ocr-service.ts  policy-parser.ts  stats.ts  thumbnail-gen.ts
dms-automation/dms-review-ui/: Dockerfile  next.config.js  package.json  tailwind.config.ts
dms-automation/dms-review-ui/app/: globals.css  layout.tsx  page.tsx
dms-automation/dms-review-ui/components/: ApprovalLogModal.tsx  AutocompleteInput.tsx  BacklogLogModal.tsx  BrowseModal.tsx  DocumentQueue.tsx  DocumentReviewInterface.tsx  DocumentViewer.tsx  FileSelector.tsx  FolderBrowser.tsx  (+1 more)
dms-automation/menu-portal/: Dockerfile  package.json  server.js
docman-docker/: Dockerfile  settings.php
docs/: ARCHITECTURE.md  DEVELOPMENT.md  QUICKSTART.md  README.md  REGISTRY_SETUP.md
examples/: basic_usage.py
prod/: .env.example  docker-compose.yml
scripts/: build.sh  clean.sh  pull.sh  push.sh  setup.sh  start.sh  stop.sh  validate.sh
src/doc_intelligence/: __init__.py  classifiers.py  extractors.py  processor.py
test/: .env.example  docker-compose.yml
tests/: conftest.py  test_extractors.py  test_processor.py
(+23 files in other folders)
